<resources>
    <string name="ap_name">Mood App</string>
    <string name="navigatiopn_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">MoodApp</string>
    <string name="logout">Log Out</string>
    <string name="night_mode">Night Mode</string>
    <string name="profile">Profile</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="invalid_credentials">Username or Password error!</string>
    <string name="logo_content_description">Shrine Logo</string>
    <string name="signup_button">Sign Up</string>
    <string name="hint_confirm">Confirm</string>
    <string name="login_button">Login</string>
    <string name="recent_item">Recents</string>
    <string name="home_item">Home</string>
    <string name="register_item">Register</string>
    <string name="register_button">Create account</string>

</resources>
